--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -15,10 +15,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag videotools-nginx:v1.$(date)
+      run: docker build . --file Dockerfile --tag videotools-nginx:v1
     - uses: mr-smithers-excellent/docker-build-push@v2
       with:
-        image: docker-hub-repo/videotools-nginx:v1.$(date)
+        image: docker-hub-repo/videotools-nginx:v1
 #         tag: latest
         registry: docker.io
         dockerfile: Dockerfile.ci
