--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -16,8 +16,8 @@ jobs:
     - uses: actions/checkout@v2
     - uses: mr-smithers-excellent/docker-build-push@v2
       with:
-        image: arashigen/videotools-nginx:v1.$(date +%s)
-#         registry: docker.io
+        image: videotools-nginx:v1.$(date +%s)
+        registry: arashigen
         dockerfile: Dockerfile
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
