--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,20 +21,13 @@ stages:
       vmImage: 'ubuntu-latest'
     steps:
     - task: Docker@2
-      displayName: Login to ACR
-      inputs:
-        command: login
-        containerRegistry: dockerRegistryServiceConnection1
-    - task: Docker@2
       displayName: Login to Docker Hub
       inputs:
         command: login
-        containerRegistry: dockerRegistryServiceConnection2
+        containerRegistry: 'DockerHub'
     - task: Docker@2
       displayName: Build and Push
       inputs:
         command: buildAndPush
-        repository: someUser/contoso
-        tags: |
-          tag1
-          tag2
+        repository: arashigen/aztogithubtest
+        tags: latest
