--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,13 +21,21 @@ stages:
       vmImage: 'ubuntu-latest'
     steps:
     - task: Docker@2
+      displayName: Build an image
+      inputs:
+        command: build
+        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
+        tags: |
+          $(tag)
+    - task: Docker@2
       displayName: Login to Docker Hub
       inputs:
         command: login
         containerRegistry: 'DockerHub'
     - task: Docker@2
-      displayName: Build and Push
+      displayName: Push
       inputs:
         command: buildAndPush
-        repository: arashigen/aztogithubtest
-        tags: latest
+        repository: arashigen/testazpipeline
+        tags: |
+          $(tag)
