--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,9 +33,10 @@ stages:
         command: login
         containerRegistry: 'DockerHub'
     - task: Docker@2
-      displayName: Push
+      displayName: 'push'
       inputs:
-        command: buildAndPush
+        containerRegistry: DockerHub
         repository: arashigen/videotools-nginx
         tags: |
           $(tag)
+      enabled: false
