--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,11 +32,14 @@ stages:
       inputs:
         command: login
         containerRegistry: 'DockerHub'
-    - task: Docker@2
-      displayName: 'push'
-      inputs:
-        containerRegistry: DockerHub
-        repository: arashigen/videotools-nginx
-        tags: |
-          $(tag)
-      enabled: false
+
+
+
+    # - task: Docker@2
+    #   displayName: 'push'
+    #   inputs:
+    #     containerRegistry: DockerHub
+    #     repository: arashigen/videotools-nginx
+    #     tags: |
+    #       $(tag)
+    #   enabled: false
